# gif

./: .gitignore  CMakeLists.txt  README.md  getopt.c  getopt.h  gif_lib.h  gif_win32_compat.h
cmake/: GIFLIBConfig.cmake.in
